--- a/0 - Introducción y construcción del Dataset.ipynb
+++ b/0 - Introducción y construcción del Dataset.ipynb
@@ -50,12 +50,19 @@
     "    cat snd-dataset-from-plain-json.csv | wc -l\n",
     "    1018\n",
     "\n",
-    "Por lo cual se observa que el dataset se compone de 1018 instancias.\n",
+    "Por lo cual se observa que el dataset se compone de 1017 instancias (se resta una unidad porque la primera línea define los nombres de las columnas).\n",
     "\n",
     "---\n",
     "\n",
-    "**Siguente:** [1 - Visualización y clustering (no supervisado)](1%20-%20Visualización%20y%20clustering%20(no%20supervisado).ipynb)"
+    "**Siguente:** [1 - Visualización y clustering](1%20-%20Visualización%20y%20clustering.ipynb)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -74,7 +81,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
