--- a/2a - Regresión Logística y análisis del dataset con R.ipynb
+++ b/2a - Regresión Logística y análisis del dataset con R.ipynb
@@ -881,8 +881,15 @@
     "\n",
     "---\n",
     "\n",
-    "**Siguiente:** [2b - Predicción usando variables dicotómicas (regresión)](2b%20-%20Prediccio%CC%81n%20usando%20variables%20dicot%C3%B3micas%20(regresi%C3%B3n).ipynb#Filtrar-solo-los-valores-de-tempo-con-confianza-alta!)\n"
+    "**Siguiente:** [2b - Predicción usando variables dicotómicas - regresión](2b%20-%20Predicción%20usando%20variables%20dicotómicas%20-%20regresión.ipynb)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -897,7 +904,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.4.0"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
