--- a/2b - Predicción usando variables dicotómicas - regresión.ipynb
+++ b/2b - Predicción usando variables dicotómicas - regresión.ipynb
@@ -783,21 +783,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "key_to_number_list = ['A minor', 'A major', 'A# minor', 'A# major', 'B minor', 'B major', 'C minor', 'C major', 'C# minor', 'C# major', 'D minor', 'D major', 'D# minor', 'D# major','E minor', 'E major', 'F minor', 'F major', 'F# minor', 'F# major', 'G minor', 'G major','G# minor', 'G# major']\n",
     "\n",
     "def keyToNumber(x_value):\n",
-    "    return [i for i,x in enumerate(key_to_number_list) if x == x_value][0]\n",
-    "\n",
-    "lambda x: True if x % 2 == 0 else False\n",
-    "def keyToNumberD(x_value):\n",
-    "    if keyToNumber(x)==1:\n",
-    "        return 1\n",
-    "    else:\n",
-    "        return 0"
+    "    return [i for i,x in enumerate(key_to_number_list) if x == x_value][0]"
    ]
   },
   {
@@ -2929,8 +2922,15 @@
     "\n",
     "---\n",
     "\n",
-    "**Siguiente: [3 - Reducción de la dimensionalidad SVD y PCA](3%20-%20Reducción%20de%20la%20dimensionalidad%20SVD%20y%20PCA.ipynb)** "
+    "**Siguiente:** [3 - Reducción de la dimensionalidad SVD y PCA](3%20-%20Reducción%20de%20la%20dimensionalidad%20SVD%20y%20PCA.ipynb)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -2949,7 +2949,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
