--- a/3 - Reducción de la dimensionalidad SVD y PCA.ipynb
+++ b/3 - Reducción de la dimensionalidad SVD y PCA.ipynb
@@ -1147,8 +1147,15 @@
     "\n",
     "---\n",
     "\n",
-    "**Siguiente:** [4 - Conclusión final](4%20-%20Conclusión%20final.ipynb)"
+    "**Siguiente:** [4 - Conclusión final](4%20-%20Conclusión%20final.ipynb)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1167,7 +1174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
