--- a/4 - Conclusión final.ipynb
+++ b/4 - Conclusión final.ipynb
@@ -17,8 +17,15 @@
     "\n",
     "Ante esto, se propone realizar una segmentación de los archivos originales, diviendolos en partes más chicas de 3 o segundos como máximo y generando un vector de features por cada descriptor (Tempo, Loudness, etc).\n",
     "\n",
-    "Se logró reducir las dimensionalidad del dataset y realizar visualizaciones de las proyecciones en diferentes cantidad de dimensiones y con diferentee porcentajes de representatividad. Se concluyó que con 3 dimensiones se pueden representar aproximadamente el 60% de los datos, mientras que para lograr un porcentaje mayor al 90% se necesitan 6, es decir el doble. Sobre esto, resta comparar los resultados de estas proyecciones matemáticas con técnicas basadas en probabilidad (métodos estocásticos) como t-sne."
+    "Se logró reducir las dimensionalidad del dataset y realizar visualizaciones de las proyecciones en diferentes cantidad de dimensiones y con diferentes porcentajes de representatividad. Se concluyó que con 3 dimensiones se pueden representar aproximadamente el 60% de los datos, mientras que para lograr un porcentaje mayor al 90% se necesitan 6, es decir el doble. Sobre esto, resta comparar los resultados de estas proyecciones matemáticas con técnicas basadas en probabilidad (métodos estocásticos) como t-sne."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -37,7 +44,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
