--- a/1 - Visualización y clustering.ipynb
+++ b/1 - Visualización y clustering.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Análisis del Dataset"
+    "# Análisis del Dataset\n",
+    "\n",
+    "Visualización y clustering (Aprendizaje No Supervisado)"
    ]
   },
   {
@@ -272,9 +274,9 @@
     "\n",
     "**note_confidence**: Reliability of the note name/midi/frequency estimation above (in a range between 0 and 1).\n",
     "\n",
-    "**genre**: Music genre of the analysed music track (not yet implemented).\n",
+    "**genre**: Music genre of the analysed music track.\n",
     "\n",
-    "**mood**: Mood estimation for the analysed music track (not yet implemented).\n",
+    "**mood**: Mood estimation for the analysed music track.\n",
     "\n",
     "\n",
     "**Referencia**: https://github.com/AudioCommons/ac-audio-extractor\n"
@@ -912,8 +914,15 @@
     "\n",
     "---\n",
     "\n",
-    "**Siguiente:** [2a - Regresión Logística y análisis del dataset con R](2a%20-%20Regresión%20Logística%20y%20análisis%20del%20dataset%20con%20R.ipynb)\n"
+    "**Siguiente:** [2a - Regresión Logística y análisis del dataset con R](2a%20-%20Regresión%20Logística%20y%20análisis%20del%20dataset%20con%20R.ipynb)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -932,7 +941,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
