--- a/0 - Introducción y construcción del Dataset.ipynb
+++ b/0 - Introducción y construcción del Dataset.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Índice\n",
+    "\n",
+    "* [0 - Introducción y construcción del Dataset](0%20-%20Introducción%20y%20construcción%20del%20Dataset.ipynb)\n",
+    "* [1 - Visualización y clustering](1%20-%20Visualización%20y%20clustering.ipynb)\n",
+    "* [2a - Regresión Logística y análisis del dataset con R](2a%20-%20Regresión%20Logística%20y%20análisis%20del%20dataset%20con%20R.ipynb)\n",
+    "* [2b - Predicción usando variables dicotómicas - regresión](2b%20-%20Predicción%20usando%20variables%20dicotómicas%20-%20regresión.ipynb)\n",
+    "* [3 - Reducción de la dimensionalidad SVD y PCA](3%20-%20Reducción%20de%20la%20dimensionalidad%20SVD%20y%20PCA.ipynb)\n",
+    "* [4 - Conclusión final](4%20-%20Conclusión%20final.ipynb)\n",
+    "\n",
     "# Introducción\n",
     "\n",
     "A partir de un dataset generado a partir de la extracción de características (features) de la base de datos de sonidos de [RedPanal](https://redpanal.org), un sitio colaborativo que almacena y reproduce a demanda sonidos compartidos con licencias del tipo [Creative Commons](https://creativecommons.org/), se busca extraer conocimiento sobre la composición de la base de datos utilizando diferentes algoritmos de Machine Learning.\n",
@@ -15,7 +24,6 @@
     "## Dependencias\n",
     "\n",
     "Consultar [Dependencias.md](Dependencias.md)\n",
-    "\n",
     "\n",
     "# Armar Dataset\n",
     "\n",
