* key to dummy var separated into semitone and tonality (major/minor) * Doc update and minor fixes

--- a/0 - Introducción y construcción del Dataset.ipynb
+++ b/0 - Introducción y construcción del Dataset.ipynb
@@ -41,6 +41,8 @@
     "\n",
     "Este paso hace uso del [Audio Commons Extractor](https://github.com/AudioCommons/ac-audio-extractor) mencionado, utilizando el contenedor Docker y se configura para utilizar generar por cada archivo de audio un .json plano o con la ontología para descripción de audio propuesta por el artículo: https://www.audiocommons.org/2018/07/15/audio-commons-audio-extractor.html.\n",
     "\n",
+    "NOTA: Este script internamente hace uso de docker y para que funcione los paths deben ser absolutos, por ejemplo $PWD/wavs \n",
+    "\n",
     "### (opcional) Paso 3: Separa canciones de 'muestras' según duración\n",
     "\n",
     "Este paso se aplica solo para algunos análisis y separa sonidos de menos de 5 segundos de duración en diferentes directorios.\n",
