--- a/1 - Visualización y clustering.ipynb
+++ b/1 - Visualización y clustering.ipynb
@@ -274,10 +274,9 @@
     "\n",
     "**note_confidence**: Reliability of the note name/midi/frequency estimation above (in a range between 0 and 1).\n",
     "\n",
-    "**genre**: Music genre of the analysed music track.\n",
+    "**genre**: Music genre of the analysed music track (not yet implemented).\n",
     "\n",
-    "**mood**: Mood estimation for the analysed music track.\n",
-    "\n",
+    "**mood**: Mood estimation for the analysed music track (not yet implemented).\n",
     "\n",
     "**Referencia**: https://github.com/AudioCommons/ac-audio-extractor\n"
    ]
@@ -293,149 +292,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Duration</th>\n",
-       "      <th>Loudness</th>\n",
-       "      <th>LogAttackTime</th>\n",
-       "      <th>Tempo</th>\n",
-       "      <th>TemporalCentroid</th>\n",
-       "      <th>SingleEvent</th>\n",
-       "      <th>Loop</th>\n",
-       "      <th>Tonality</th>\n",
-       "      <th>DynamicRange</th>\n",
-       "      <th>Note.midi</th>\n",
-       "      <th>Note.frequency</th>\n",
-       "      <th>Genre</th>\n",
-       "      <th>Mood</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>24.218412</td>\n",
-       "      <td>-16.581459</td>\n",
-       "      <td>0.769376</td>\n",
-       "      <td>95</td>\n",
-       "      <td>0.498596</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>G major</td>\n",
-       "      <td>9.689243</td>\n",
-       "      <td>55</td>\n",
-       "      <td>197.972900</td>\n",
-       "      <td>Genre B</td>\n",
-       "      <td>Mood B</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>243.983673</td>\n",
-       "      <td>-16.891335</td>\n",
-       "      <td>1.618665</td>\n",
-       "      <td>65</td>\n",
-       "      <td>0.479576</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>G major</td>\n",
-       "      <td>5.247044</td>\n",
-       "      <td>40</td>\n",
-       "      <td>85.456451</td>\n",
-       "      <td>Genre A</td>\n",
-       "      <td>Mood A</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>15.281632</td>\n",
-       "      <td>-21.658251</td>\n",
-       "      <td>0.582658</td>\n",
-       "      <td>63</td>\n",
-       "      <td>0.492315</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>C minor</td>\n",
-       "      <td>1.060242</td>\n",
-       "      <td>50</td>\n",
-       "      <td>151.972198</td>\n",
-       "      <td>Genre B</td>\n",
-       "      <td>Mood B</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>-10.525232</td>\n",
-       "      <td>-1.590209</td>\n",
-       "      <td>119</td>\n",
-       "      <td>0.468918</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>G# minor</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>41</td>\n",
-       "      <td>91.402817</td>\n",
-       "      <td>Genre A</td>\n",
-       "      <td>Mood A</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1.454150</td>\n",
-       "      <td>-28.335722</td>\n",
-       "      <td>-0.492548</td>\n",
-       "      <td>152</td>\n",
-       "      <td>0.502481</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>F# minor</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>107</td>\n",
-       "      <td>3984.657227</td>\n",
-       "      <td>Genre A</td>\n",
-       "      <td>Mood A</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     Duration   Loudness  LogAttackTime  Tempo  TemporalCentroid  SingleEvent  \\\n",
-       "0   24.218412 -16.581459       0.769376     95          0.498596        False   \n",
-       "1  243.983673 -16.891335       1.618665     65          0.479576        False   \n",
-       "2   15.281632 -21.658251       0.582658     63          0.492315         True   \n",
-       "3    2.000000 -10.525232      -1.590209    119          0.468918        False   \n",
-       "4    1.454150 -28.335722      -0.492548    152          0.502481         True   \n",
-       "\n",
-       "    Loop  Tonality  DynamicRange  Note.midi  Note.frequency    Genre    Mood  \n",
-       "0  False   G major      9.689243         55      197.972900  Genre B  Mood B  \n",
-       "1  False   G major      5.247044         40       85.456451  Genre A  Mood A  \n",
-       "2   True   C minor      1.060242         50      151.972198  Genre B  Mood B  \n",
-       "3  False  G# minor      0.000000         41       91.402817  Genre A  Mood A  \n",
-       "4  False  F# minor      0.000000        107     3984.657227  Genre A  Mood A  "
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-cece0f144610>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Descarto columnas que no se van a usar por ahora\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# Tip: axis number (0 for rows and 1 for columns)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Tempo.confidence\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Tonality.confidence\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Note.confidence\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'data' is not defined"
+     ]
     }
    ],
    "source": [
@@ -445,8 +314,10 @@
     "data = data.drop(\"Tonality.confidence\", axis=1);\n",
     "data = data.drop(\"Note.confidence\", axis=1);\n",
     "\n",
-    "#data = data.drop(\"Loop\", axis=1);\n",
-    "#data = data.drop(\"Key\", axis=1);\n",
+    "# Según la documentación (Referencia: https://github.com/AudioCommons/ac-audio-extractor) Genre y Mood\n",
+    "# todavía no están correctamente implementadas, así que se descarta su valor\n",
+    "data = data.drop(\"Genre\", axis=1);\n",
+    "data = data.drop(\"Mood\", axis=1);\n",
     "data.head()"
    ]
   },
