Se incluye análisis de preservación de distancias en el vector de tonalidad/key Corrección, se agrega escalado antes de aplicar k-means t-sne proyección en 2d y 3d (visualización de reducción de la dimensionalidad)

--- a/3 - Reducción de la dimensionalidad SVD y PCA.ipynb
+++ b/3 - Reducción de la dimensionalidad SVD y PCA.ipynb
@@ -1160,15 +1160,8 @@
     "\n",
     "---\n",
     "\n",
-    "**Siguiente:** [4 - Conclusión final](4%20-%20Conclusión%20final.ipynb)"
+    "**Siguiente:** [4 - Conclusión final](4%20-%20Conclusión%20primera%20parte.ipynb)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
