--- a/notebooks/db-ontology-json-ld/2 - Predicción de Tempo (regresión lineal).ipynb
+++ b/notebooks/db-ontology-json-ld/2 - Predicción de Tempo (regresión lineal).ipynb
@@ -4,12 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Predecir tonalidad en función el resto de las variables"
+    "# Predecir tonalidad en función el resto de las variables\n",
+    "\n",
+    "(dataset con ontología json-ld)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,8 +25,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataset con ontología json-ld"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -128,13 +137,15 @@
        "4   C major  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_csv('snd-dataset.csv')\n",
+    "data = pd.read_csv('snd-dataset-from-json-ld.csv') # Dataset original\n",
+    "#data = pd.read_csv('snd-segmented-dataset-from-json-ld.csv')\n",
+    "\n",
     "# Descarto columnas que no se van a usar por ahora\n",
     "# Tip: axis number (0 for rows and 1 for columns)\n",
     "data = data.drop(\"Tempo.confidence\", axis=1);\n",
@@ -147,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +167,7 @@
        "(1711, 7)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +294,7 @@
        "Pitch                    -0.008670  1.000000  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -336,10 +347,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   16.13</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Fri, 16 Nov 2018</td> <th>  Prob (F-statistic):</th> <td>6.16e-05</td> \n",
+       "  <th>Date:</th>             <td>Thu, 21 Feb 2019</td> <th>  Prob (F-statistic):</th> <td>6.16e-05</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>03:29:59</td>     <th>  Log-Likelihood:    </th> <td> -8083.9</td> \n",
+       "  <th>Time:</th>                 <td>12:55:59</td>     <th>  Log-Likelihood:    </th> <td> -8083.9</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  1711</td>      <th>  AIC:               </th> <td>1.617e+04</td>\n",
@@ -388,8 +399,8 @@
        "Dep. Variable:                      y   R-squared:                       0.009\n",
        "Model:                            OLS   Adj. R-squared:                  0.009\n",
        "Method:                 Least Squares   F-statistic:                     16.13\n",
-       "Date:                Fri, 16 Nov 2018   Prob (F-statistic):           6.16e-05\n",
-       "Time:                        03:29:59   Log-Likelihood:                -8083.9\n",
+       "Date:                Thu, 21 Feb 2019   Prob (F-statistic):           6.16e-05\n",
+       "Time:                        12:55:59   Log-Likelihood:                -8083.9\n",
        "No. Observations:                1711   AIC:                         1.617e+04\n",
        "Df Residuals:                    1709   BIC:                         1.618e+04\n",
        "Df Model:                           1                                         \n",
@@ -411,7 +422,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 19,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -494,10 +505,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   8.537</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Fri, 16 Nov 2018</td> <th>  Prob (F-statistic):</th> <td>0.000204</td> \n",
+       "  <th>Date:</th>             <td>Thu, 21 Feb 2019</td> <th>  Prob (F-statistic):</th> <td>0.000204</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>03:30:02</td>     <th>  Log-Likelihood:    </th> <td> -8083.5</td> \n",
+       "  <th>Time:</th>                 <td>12:56:00</td>     <th>  Log-Likelihood:    </th> <td> -8083.5</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  1711</td>      <th>  AIC:               </th> <td>1.617e+04</td>\n",
@@ -549,8 +560,8 @@
        "Dep. Variable:                      y   R-squared:                       0.010\n",
        "Model:                            OLS   Adj. R-squared:                  0.009\n",
        "Method:                 Least Squares   F-statistic:                     8.537\n",
-       "Date:                Fri, 16 Nov 2018   Prob (F-statistic):           0.000204\n",
-       "Time:                        03:30:02   Log-Likelihood:                -8083.5\n",
+       "Date:                Thu, 21 Feb 2019   Prob (F-statistic):           0.000204\n",
+       "Time:                        12:56:00   Log-Likelihood:                -8083.5\n",
        "No. Observations:                1711   AIC:                         1.617e+04\n",
        "Df Residuals:                    1708   BIC:                         1.619e+04\n",
        "Df Model:                           2                                         \n",
@@ -575,7 +586,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 22,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -612,9 +623,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "RedPanalDBAnalysis",
    "language": "python",
-   "name": "python3"
+   "name": "redpanaldbanalysis"
   },
   "language_info": {
    "codemirror_mode": {
@@ -626,7 +637,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
