--- a/notebooks/8 - Redes Neuronales GAN y reconstrucción de fase.ipynb
+++ b/notebooks/8 - Redes Neuronales GAN y reconstrucción de fase.ipynb
@@ -136,6 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Genera candidatos\n",
     "def make_generator():\n",
     "    D = 64 # model size\n",
     "\n",
@@ -167,6 +168,7 @@
     "\n",
     "    return model\n",
     "\n",
+    "# Evalua y discrimina\n",
     "def make_discriminator(nb_categories):\n",
     "    D = 64 # model size\n",
     "\n",
@@ -490,7 +492,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "version": "2.7.15rc1"
   }
  },
  "nbformat": 4,
