--- a/notebooks/5 - Reducción de la dimensionalidad con t-sne.ipynb
+++ b/notebooks/5 - Reducción de la dimensionalidad con t-sne.ipynb
@@ -394,7 +394,7 @@
     "\n",
     "Con t-sne (probabilístico), se observa una distribución más detallada con respecto a la obtenida por la proyección de PCA sobre 2 dimensiones (puramente matemático, pero sirve para predecir)\n",
     "\n",
-    "Referencia: [6 - Particionamiento del dataset](6%20-%20Particionamiento%20del%20dataset.ipynb0)"
+    "Referencia: [6 - Particionamiento del dataset](6%20-%20DatasetParticionado%20-%20Predicción%20usando%20variables%20dicotómicas%20-%20regresión.ipynb)"
    ]
   },
   {
