--- a/notebooks/8 - Redes Neuronales GAN y reconstrucción de fase.ipynb
+++ b/notebooks/8 - Redes Neuronales GAN y reconstrucción de fase.ipynb
@@ -468,6 +468,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Siguiente: [9 - Conclusión final](9%20-%20Conclusión%20final.ipynb)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
