--- a/notebooks/6 - DatasetParticionado - Predicción usando variables dicotómicas - regresión.ipynb
+++ b/notebooks/6 - DatasetParticionado - Predicción usando variables dicotómicas - regresión.ipynb
@@ -3665,7 +3665,7 @@
     "\n",
     "---\n",
     "\n",
-    "**Siguiente:** []()"
+    "**Siguiente:** [7 - DatasetParticionado PCA y t-SNE](7%20-%20DatasetParticionado%20PCA%20y%20t-sne.ipynb)"
    ]
   },
   {
@@ -3692,7 +3692,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
