--- a/notebooks/3 - Reducción de la dimensionalidad SVD y PCA.ipynb
+++ b/notebooks/3 - Reducción de la dimensionalidad SVD y PCA.ipynb
@@ -1572,7 +1572,7 @@
     "\n",
     "---\n",
     "\n",
-    "**Siguiente:** [4 - Conclusiones parciales](4%20-%20Conclusión%20parcial%20(primera%20parte).ipynb)"
+    "**Siguiente:** [4 - Conclusiones parciales](4%20-%20Conclusión%20parcial.ipynb)"
    ]
   },
   {
